<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblIntro"
            style="@style/SectionHeader"
            android:text="@string/intro" />

        <Button
            android:id="@+id/btnRGB2HSL"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/rgb2hsl_launch" />

        <Button
            android:id="@+id/btnHSL2RGB"
            style="@style/Button"
            android:layout_margin="10dp"
            android:text="@string/hsl2rgb_launch" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>